[gd_scene load_steps=65 format=2]

[ext_resource path="res://Assets/Graphics/FreeKnight_v1/Colour2/NoOutline/120x80_PNGSheets/_Run.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Player.gd" type="Script" id=2]
[ext_resource path="res://Assets/Graphics/FreeKnight_v1/Colour1/NoOutline/120x80_PNGSheets/_Attack2NoMovement.png" type="Texture" id=3]
[ext_resource path="res://Assets/Graphics/FreeKnight_v1/Colour2/NoOutline/120x80_PNGSheets/_Idle.png" type="Texture" id=4]
[ext_resource path="res://Assets/Graphics/FreeKnight_v1/Colour2/NoOutline/120x80_PNGSheets/_Death.png" type="Texture" id=5]
[ext_resource path="res://Assets/Graphics/FreeKnight_v1/Colour2/NoOutline/120x80_PNGSheets/_Roll.png" type="Texture" id=6]

[sub_resource type="CapsuleShape2D" id=28]
radius = 8.97093
height = 28.1356

[sub_resource type="CircleShape2D" id=2]
radius = 43.0421

[sub_resource type="Animation" id=31]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ "idle" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AttackRange/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="Animation" id=49]
resource_name = "attack1"
length = 0.25
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "attack1" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AttackRange/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ false, false, false, false, true ]
}

[sub_resource type="Animation" id=79]
resource_name = "die"
length = 0.9
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "death" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 5, 6, 7, 8, 9 ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.8 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ "player_died" ],
"method": "emit_signal"
} ]
}

[sub_resource type="Animation" id=51]
resource_name = "idle"
length = 0.45
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "idle" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 5, 6, 7, 8, 9 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AttackRange/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.45 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, true ]
}

[sub_resource type="Animation" id=80]
resource_name = "roll"
length = 0.6
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "roll" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11 ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.6 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "go_to_idle"
} ]
}

[sub_resource type="Animation" id=50]
resource_name = "run"
length = 0.45
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "run" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 5, 6, 7, 8, 9 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AttackRange/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.45 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, true ]
}

[sub_resource type="AtlasTexture" id=63]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 120, 80 )

[sub_resource type="AtlasTexture" id=64]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 120, 0, 120, 80 )

[sub_resource type="AtlasTexture" id=65]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 240, 0, 120, 80 )

[sub_resource type="AtlasTexture" id=66]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 360, 0, 120, 80 )

[sub_resource type="AtlasTexture" id=67]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 480, 0, 120, 80 )

[sub_resource type="AtlasTexture" id=68]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 600, 0, 120, 80 )

[sub_resource type="AtlasTexture" id=69]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 120, 80 )

[sub_resource type="AtlasTexture" id=70]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 120, 0, 120, 80 )

[sub_resource type="AtlasTexture" id=71]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 240, 0, 120, 80 )

[sub_resource type="AtlasTexture" id=72]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 360, 0, 120, 80 )

[sub_resource type="AtlasTexture" id=73]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 480, 0, 120, 80 )

[sub_resource type="AtlasTexture" id=74]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 600, 0, 120, 80 )

[sub_resource type="AtlasTexture" id=75]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 720, 0, 120, 80 )

[sub_resource type="AtlasTexture" id=76]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 840, 0, 120, 80 )

[sub_resource type="AtlasTexture" id=77]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 960, 0, 120, 80 )

[sub_resource type="AtlasTexture" id=78]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 1080, 0, 120, 80 )

[sub_resource type="AtlasTexture" id=52]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 120, 80 )

[sub_resource type="AtlasTexture" id=53]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 120, 0, 120, 80 )

[sub_resource type="AtlasTexture" id=54]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 240, 0, 120, 80 )

[sub_resource type="AtlasTexture" id=55]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 360, 0, 120, 80 )

[sub_resource type="AtlasTexture" id=56]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 480, 0, 120, 80 )

[sub_resource type="AtlasTexture" id=57]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 600, 0, 120, 80 )

[sub_resource type="AtlasTexture" id=58]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 720, 0, 120, 80 )

[sub_resource type="AtlasTexture" id=59]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 840, 0, 120, 80 )

[sub_resource type="AtlasTexture" id=60]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 960, 0, 120, 80 )

[sub_resource type="AtlasTexture" id=61]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 1080, 0, 120, 80 )

[sub_resource type="AtlasTexture" id=81]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 120, 80 )

[sub_resource type="AtlasTexture" id=82]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 120, 0, 120, 80 )

[sub_resource type="AtlasTexture" id=83]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 240, 0, 120, 80 )

[sub_resource type="AtlasTexture" id=84]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 360, 0, 120, 80 )

[sub_resource type="AtlasTexture" id=85]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 480, 0, 120, 80 )

[sub_resource type="AtlasTexture" id=86]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 600, 0, 120, 80 )

[sub_resource type="AtlasTexture" id=87]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 720, 0, 120, 80 )

[sub_resource type="AtlasTexture" id=88]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 840, 0, 120, 80 )

[sub_resource type="AtlasTexture" id=89]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 960, 0, 120, 80 )

[sub_resource type="AtlasTexture" id=90]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 1080, 0, 120, 80 )

[sub_resource type="AtlasTexture" id=91]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 1200, 0, 120, 80 )

[sub_resource type="AtlasTexture" id=92]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 1320, 0, 120, 80 )

[sub_resource type="AtlasTexture" id=39]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 120, 80 )

[sub_resource type="AtlasTexture" id=40]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 120, 0, 120, 80 )

[sub_resource type="AtlasTexture" id=41]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 240, 0, 120, 80 )

[sub_resource type="AtlasTexture" id=42]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 360, 0, 120, 80 )

[sub_resource type="AtlasTexture" id=43]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 480, 0, 120, 80 )

[sub_resource type="AtlasTexture" id=44]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 600, 0, 120, 80 )

[sub_resource type="AtlasTexture" id=45]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 720, 0, 120, 80 )

[sub_resource type="AtlasTexture" id=46]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 840, 0, 120, 80 )

[sub_resource type="AtlasTexture" id=47]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 960, 0, 120, 80 )

[sub_resource type="AtlasTexture" id=48]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1080, 0, 120, 80 )

[sub_resource type="SpriteFrames" id=12]
animations = [ {
"frames": [ SubResource( 63 ), SubResource( 64 ), SubResource( 65 ), SubResource( 66 ), SubResource( 67 ), SubResource( 68 ) ],
"loop": true,
"name": "attack1",
"speed": 5.0
}, {
"frames": [ SubResource( 69 ), SubResource( 70 ), SubResource( 71 ), SubResource( 72 ), SubResource( 73 ), SubResource( 74 ), SubResource( 75 ), SubResource( 76 ), SubResource( 77 ), SubResource( 78 ) ],
"loop": true,
"name": "death",
"speed": 5.0
}, {
"frames": [ SubResource( 52 ), SubResource( 53 ), SubResource( 54 ), SubResource( 55 ), SubResource( 56 ), SubResource( 57 ), SubResource( 58 ), SubResource( 59 ), SubResource( 60 ), SubResource( 61 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 81 ), SubResource( 82 ), SubResource( 83 ), SubResource( 84 ), SubResource( 85 ), SubResource( 86 ), SubResource( 87 ), SubResource( 88 ), SubResource( 89 ), SubResource( 90 ), SubResource( 91 ), SubResource( 92 ) ],
"loop": true,
"name": "roll",
"speed": 5.0
}, {
"frames": [ SubResource( 39 ), SubResource( 40 ), SubResource( 41 ), SubResource( 42 ), SubResource( 43 ), SubResource( 44 ), SubResource( 45 ), SubResource( 46 ), SubResource( 47 ), SubResource( 48 ) ],
"loop": true,
"name": "run",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=62]
extents = Vector2( 19, 21.929 )

[node name="Player" type="KinematicBody2D"]
scale = Vector2( 1.00324, 1 )
collision_layer = 2
script = ExtResource( 2 )
max_hp = 100

[node name="Hitbox" type="CollisionShape2D" parent="."]
position = Vector2( 0, 21 )
shape = SubResource( 28 )

[node name="CompanionRange" type="Area2D" parent="."]
position = Vector2( 0, 20 )
collision_layer = 2
collision_mask = 4
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="CompanionRange"]
shape = SubResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 31 )
anims/attack1 = SubResource( 49 )
anims/die = SubResource( 79 )
anims/idle = SubResource( 51 )
anims/roll = SubResource( 80 )
anims/run = SubResource( 50 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 3.98708, -2 )
frames = SubResource( 12 )
animation = "idle"
__meta__ = {
"_edit_lock_": true
}

[node name="AttackRange" type="Area2D" parent="."]
position = Vector2( 0, 20 )
collision_layer = 2
collision_mask = 8
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackRange"]
position = Vector2( 26.9128, -1 )
rotation = 1.5708
shape = SubResource( 62 )
disabled = true
__meta__ = {
"_edit_lock_": true
}

[connection signal="body_shape_entered" from="CompanionRange" to="." method="_on_CompanionRange_body_shape_entered"]
[connection signal="body_shape_exited" from="CompanionRange" to="." method="_on_CompanionRange_body_shape_exited"]
[connection signal="body_entered" from="AttackRange" to="." method="_on_AttackRange_body_entered"]
